[package]
name = "async-nau7802"
version = "0.2.0"
authors = ["Amer Safdari <amersafdari@gmail.com>"]
edition = "2021"
readme = "README.md"
license = "MIT"
description = "Rust library for the NAU7802 I2C ADC using embedded-hal-async"

[lib]
test = false
bench = false

[features]
default = []

[dependencies]
embedded-hal-async = "1.0.0"

[dependencies.byteorder]
version = "1.3.4"
default-features = false
