[package]
name = "async-nau7802"
version = "0.2.0"
authors = ["Amer Safdari <amersafdari@gmail.com>"]
edition = "2021"
readme = "README.md"
license = "MIT"
description = "Rust library for the NAU7802 I2C ADC using embedded-hal-async"

[lib]
test = false
bench = false

[features]
thiserror = ["dep:thiserror"]
serde = ["dep:serde"]
# derive's MaxSize on Error enum
postcard = ["dep:postcard"]
defmt = ["dep:defmt", "embedded-hal-async/defmt-03"]

[dependencies]
embedded-hal-async = "1.0.0"
defmt = { version = "0.3", optional = true }
thiserror = { version = "1.0.38", optional = true }
serde = { version = "1.0", features = ["derive"], default-features = false, optional = true }
postcard = { version = "1.0.8", features = ["experimental-derive"], optional = true }


[dependencies.byteorder]
version = "1.3.4"
default-features = false
